CHANGES IN scidb 2.0.0:

   o Removed scidb class--all objects are presented as data frames

   o Removed scidb array arithmetic

   o Hugely simplified the package, improved data transfer performance

CHANGES IN scidb 1.1-3:

   o Support for upcoming SciDB 14.12, untested backwards support for
     older releases

   o Improved type parsing support, new binary transfer option for data frame
     objecs. This is much faster than UTF-8 transfer from SciDB.

   o Support for streaming data from SciDB.

   o Option to disable interrupt handling for faster large data transfers.

   o Added functions include order, more flexible dist, peek.

CHANGES IN scidb 1.1-2:

  SCIDB SUPPORT

    o Support for SciDB 14.3, untested support for older SciDB releases

    o Dropping arrays from other R sessions requires a non-default option
      facilitating multiple-user settings.

    o Queries can be canceled with R user interrupts now (for example with
      CTRL + C or ESC).

  IMPROVEMENTS

    o Many improvements to merge and aggregate functions

    o N-d arrays with multiple attributes can now index with `$`

    o Improved R save/load of R data files containing SciDB objects

  NEW FEATURES

    o Support for Paradigm4 glm and a simple glm model matrix builder

    o Support for Paradigm4 truncated SVD routine

    o Added hist, quantile, all.equal, antijoin, a `c` (SciDB concat-like)
      function and many others

CHANGES IN scidb 1.1-1:

  WINDOWED AGGREGATES

    o The aggregate function now supports moving and fixed window aggregates.

  TLS/SSL ENCRYPTION AND AUTHENTICATION

    o The package now supports TLS/SSL encrypted communication with the
      shim network service and authentication. The only function affected
      by this is `scidbconnect` -- simply supply an SSL port number and
      username and password arguments.

  LAZY EVALUATION

    o Most scidb and scidbdf object can now represent array promises,